kubernetes/apps/adguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard
    app.kubernetes.io/component: dns
spec:
  type: ClusterIP
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: adguard
