kubernetes/apps/adguard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: adguard.localhost.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3000
